<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.RestaurantInfoFragment">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/cl_rezervo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_Personat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:hint="@string/sapersona"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:textColor="@android:color/white"
                    app:backgroundTint="@color/apporange"

                    android:id="@+id/btn_Rezervo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="40dp"
                    android:text="Rezervo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/Ora"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="@+id/Ora"
                    app:layout_constraintTop_toBottomOf="@+id/rasti" />

                <EditText
                    android:id="@+id/Ora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:ems="10"
                    android:hint="@string/data"
                    android:inputType="text|time"
                    app:layout_constraintEnd_toEndOf="@+id/Data"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/Data"
                    app:layout_constraintTop_toBottomOf="@+id/Data" />

                <EditText
                    android:id="@+id/Data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:ems="10"
                    android:hint="@string/ora"
                    android:inputType="text|date"
                    app:layout_constraintEnd_toEndOf="@+id/et_Personat"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/et_Personat"
                    app:layout_constraintTop_toBottomOf="@+id/et_Personat" />

                <EditText
                    android:id="@+id/rasti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:ems="10"
                    android:hint="@string/rasti"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="@+id/Ora"
                    app:layout_constraintStart_toStartOf="@+id/Ora"
                    app:layout_constraintTop_toBottomOf="@+id/Ora" />


            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


    <TextView
        android:id="@+id/textView8"
        android:layout_width="267dp"
        android:layout_height="56dp"
        android:layout_marginTop="416dp"
        android:text="TextView"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="32dp" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="273dp"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="277dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/textView35"
        app:layout_constraintStart_toStartOf="@+id/textView35"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />


</android.support.constraint.ConstraintLayout>